--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b && vite build && vite build --mode widget",
     "build:widget": "vite build --mode widget",
     "lint": "eslint .",
     "preview": "vite preview"
