--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-dialog": "^1.1.15",
+		"@types/pg": "^8.16.0",
+		"better-auth": "^1.4.18",
+		"pg": "^8.17.2",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0"
 	},
