--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@hono/node-server": "^1.19.9",
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@types/pg": "^8.16.0",
 		"better-auth": "^1.4.18",
+		"hono": "^4.11.7",
 		"pg": "^8.17.2",
 		"react": "^19.2.0",
-		"react-dom": "^19.2.0"
+		"react-dom": "^19.2.0",
+		"@tanstack/react-router": "^1.96.1",
+		"@tanstack/react-router-devtools": "^1.96.1"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.39.1",
+		"@hono/vite-dev-server": "^0.24.1",
 		"@types/node": "^24.10.1",
 		"@types/react": "^19.2.5",
 		"@types/react-dom": "^19.2.3",
