--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
 	"dependencies": {
 		"@hono/node-server": "^1.19.9",
 		"@radix-ui/react-dialog": "^1.1.15",
+		"@tanstack/react-router": "^1.96.1",
+		"@tanstack/react-router-devtools": "^1.96.1",
 		"@types/pg": "^8.16.0",
 		"better-auth": "^1.4.18",
+		"dotenv": "^17.2.3",
 		"hono": "^4.11.7",
 		"pg": "^8.17.2",
 		"react": "^19.2.0",
-		"react-dom": "^19.2.0",
-		"@tanstack/react-router": "^1.96.1",
-		"@tanstack/react-router-devtools": "^1.96.1"
+		"react-dom": "^19.2.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.39.1",
